<resources>
    <string name="app_name">ContactScan</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash_view">SplashView</string>
    <string name="author">Philipp Gatzka</string>
    <string name="company">ZLI Zürcher Lehrbetriebsverband Informatik</string>
    <string name="resolving_contacts">Resolving Contacts</string>
    <string name="share">Share</string>
    <string name="scan">Scan</string>
    <string name="qr_code">QR Code</string>
    <string name="select">Select</string>
    <string name="rescan">Rescan</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="number">Number:</string>
    <string name="is_this_correct">Is this correct?</string>
    <string name="url">http</string>
</resources>